<resources>
    <string name="app_name">AuthFlowApp</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_description">Enter your registered email. We\'ll send you a password reset link.</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="welcome">Welcome</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="logout">Logout</string>
</resources>